--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "autoprefixer": "^10.4.19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
